plugins {
    id "fabric-loom" version "1.9-SNAPSHOT"
    id "maven-publish"
}

version = project.mod_version + "+mc" + project.minecraft_version
group = project.maven_group
archivesBaseName = project.archives_base_name

repositories {
    mavenCentral()
    maven {
        name = "Fabric"
        url = "https://maven.fabricmc.net/"
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    mappings "net.fabricmc:yarn:${yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"

    // Add Gson for config file handling
    implementation "com.google.code.gson:gson:2.10.1"
}

loom {
    // no extra config needed for this mod
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}